--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
     #openPostModalBtn {
       position: fixed;
       top: 20px;
-      left: 50%;
-      transform: translateX(-50%);
+      left: 20%;
+      transform: none;
       z-index: 1000;
       background: #ff4500;
       color: white;
