--- a/index.html
+++ b/index.html
@@ -99,6 +99,30 @@
       border-radius: 2px;
       transition: 0.3s;
     }
+    .info-btn {
+      position: fixed;
+      top: 56px;
+      right: 20px;
+      z-index: 1002;
+      background: none;
+      border: none;
+      cursor: pointer;
+      padding: 6px;
+    }
+   .info-btn svg {
+     width: 2.3em;
+     height: 2.3em;
+     fill: #ff4500;
+     background: #181818;
+     border-radius: 50%;
+     box-shadow: 0 2px 12px #ff450033;
+     padding: 3px;
+     transition: background 0.2s;
+    }
+   .info-btn:hover svg {
+     background: #292929;
+     fill: #ff7f50;
+    }
     .menu {
       display: none;
       position: fixed;
@@ -317,6 +341,9 @@
     <span></span>
     <span></span>
   </div>
+  <button class="info-btn" id="info-btn" title="Información">
+  <svg viewBox="0 0 24 24"><circle cx="12" cy="12" r="10" stroke="none"/><rect x="11" y="10" width="2" height="7"/><rect x="11" y="7" width="2" height="2"/></svg>
+</button>
   <div class="menu" id="menu">
     <div id="menu-user-text" style="margin-bottom:10px;">
       <!-- Aquí se muestra el usuario si está logueado -->
@@ -666,6 +693,26 @@
       loadFromStorage();
       updateMenuUserText();
     };
+    document.getElementById('info-btn').addEventListener('click', function() {
+  const win = window.open('about:blank');
+  if (win) {
+    win.document.write(`
+      <html>
+      <head>
+        <title>Acuerdos</title>
+        <style>
+          body, html { margin:0; padding:0; height:100%; }
+          iframe { border:none; width:100vw; height:100vh; }
+        </style>
+      </head>
+      <body>
+        <iframe src="acuerdos.html"></iframe>
+      </body>
+      </html>
+    `);
+    win.document.close();
+  }
+});
   </script>
 </body>
 </html>
